[gd_scene load_steps=29 format=3 uid="uid://5jqan3m2kp17"]

[ext_resource type="Script" path="res://UI/Game_UI.gd" id="1_x2gwm"]
[ext_resource type="Texture2D" uid="uid://b3taipj6qm4py" path="res://addons/Tiny Swords/Resources/Resources/M_Idle_(NoShadow).png" id="3_s007r"]
[ext_resource type="Texture2D" uid="uid://b5326lbapdppp" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Blue_Connection_Left.png" id="3_ug3sk"]
[ext_resource type="Texture2D" uid="uid://kgqlgq8any4g" path="res://addons/Tiny Swords/UI/Banners/Carved_Regular.png" id="4_0chpn"]
[ext_resource type="Texture2D" uid="uid://bquk5yaip751g" path="res://addons/mine/raio.png" id="5_gbo47"]
[ext_resource type="Texture2D" uid="uid://edlt8mlv15uh" path="res://addons/mine/mao.png" id="6_0rlab"]
[ext_resource type="Texture2D" uid="uid://dbjhm5eajayo0" path="res://addons/kenney_inputPromptsPixel16×/Tiles/tile_0357.png" id="6_7ewu2"]
[ext_resource type="Texture2D" uid="uid://pyreheh05em4" path="res://addons/kenney_inputPromptsPixel16×/Tiles/tile_0359.png" id="8_3jkjd"]
[ext_resource type="Texture2D" uid="uid://cw4vmg3pasd3w" path="res://addons/kenney_inputPromptsPixel16×/Tiles/tile_0527.png" id="8_cwcko"]
[ext_resource type="Texture2D" uid="uid://bl22qvn2qb5ma" path="res://addons/kenney_inputPromptsPixel16×/Tiles/tile_0528.png" id="9_i1l1k"]
[ext_resource type="AudioStream" uid="uid://cnb1bvjvlyqe6" path="res://addons/soundtrack/multi-pop-1-188165.mp3" id="11_2x2y5"]
[ext_resource type="AudioStream" uid="uid://bj40p3kmb0onj" path="res://addons/soundtrack/tap-notification-180637.mp3" id="12_qt7ha"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_00pks"]
load_path = "res://.godot/imported/Banner_Connection_Left.png-8552fe1cd41c0311b0fbdaa24d92c30d.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eksw7"]
resource_local_to_scene = true
texture = SubResource("CompressedTexture2D_00pks")
texture_margin_left = 48.0
texture_margin_top = 8.0
texture_margin_right = 24.0
texture_margin_bottom = 40.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(0, 48, 160, 128)

[sub_resource type="SystemFont" id="SystemFont_nxew0"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_ccc4h"]
font = SubResource("SystemFont_nxew0")
font_size = 45
font_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_5oc1i"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_5lkfr"]
font = SubResource("SystemFont_5oc1i")
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nqynk"]
texture = ExtResource("3_ug3sk")
texture_margin_left = 48.0
texture_margin_top = 8.0
texture_margin_right = 40.0
texture_margin_bottom = 16.0
axis_stretch_vertical = 2
region_rect = Rect2(0, 0, 64, 56)

[sub_resource type="LabelSettings" id="LabelSettings_th2i3"]
font = SubResource("SystemFont_nxew0")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vxra"]
atlas = ExtResource("3_s007r")
region = Rect2(40, 48, 56, 56)

[sub_resource type="SystemFont" id="SystemFont_8woq2"]
font_names = PackedStringArray("Calibri")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_ngm45"]
font = SubResource("SystemFont_8woq2")
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b5mmr"]
texture = ExtResource("4_0chpn")
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="SystemFont" id="SystemFont_1l0fk"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_enw7h"]
font = SubResource("SystemFont_1l0fk")
font_size = 25

[sub_resource type="SystemFont" id="SystemFont_pevpe"]
font_names = PackedStringArray("Impact")
font_weight = 900
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_qtva8"]
font = SubResource("SystemFont_pevpe")
font_size = 30
font_color = Color(0.988235, 1, 0.313726, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_x2gwm")

[node name="Progresso" type="ProgressBar" parent="."]
offset_left = 22.0
offset_top = 551.0
offset_right = 99.0
offset_bottom = 629.0
max_value = 10.0
value = 10.0
fill_mode = 3
show_percentage = false

[node name="Progresso2" type="ProgressBar" parent="."]
offset_left = 116.0
offset_top = 551.0
offset_right = 193.0
offset_bottom = 629.0
max_value = 10.0
value = 10.0
fill_mode = 3
show_percentage = false

[node name="Panel" type="Panel" parent="."]
offset_left = -10.0
offset_top = 13.0
offset_right = 218.0
offset_bottom = 99.0
theme_override_styles/panel = SubResource("StyleBoxTexture_eksw7")

[node name="Label2" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 46.0
offset_top = 8.0
offset_right = 140.0
offset_bottom = 64.0
scale = Vector2(0.68, 0.68)
text = "KILLS"
label_settings = SubResource("LabelSettings_ccc4h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillsLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 123.0
offset_top = 9.0
offset_right = 230.0
offset_bottom = 65.0
scale = Vector2(0.68, 0.68)
text = "10000"
label_settings = SubResource("LabelSettings_5lkfr")
vertical_alignment = 1

[node name="Panel6" type="Panel" parent="."]
offset_left = 105.0
offset_top = 64.0
offset_right = 203.0
offset_bottom = 111.0
theme_override_styles/panel = SubResource("StyleBoxTexture_nqynk")

[node name="MeatLabel" type="Label" parent="Panel6"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 45.0
offset_top = 7.0
offset_right = 79.0
offset_bottom = 48.0
scale = Vector2(0.68, 0.68)
text = "50"
label_settings = SubResource("LabelSettings_th2i3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel6"]
layout_mode = 0
offset_left = 12.0
offset_top = 6.0
offset_right = 68.0
offset_bottom = 62.0
scale = Vector2(0.52, 0.52)
texture = SubResource("AtlasTexture_8vxra")

[node name="TimerLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 31.0
offset_right = 41.0
offset_bottom = 65.0
grow_horizontal = 2
text = "00:77"
label_settings = SubResource("LabelSettings_ngm45")

[node name="Panel2" type="Panel" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -18.0
offset_right = 100.0
offset_bottom = 62.0
grow_vertical = 0
rotation = -1.57072
theme_override_styles/panel = SubResource("StyleBoxTexture_b5mmr")

[node name="TextureRect" type="TextureRect" parent="Panel2"]
layout_mode = 0
offset_left = 65.0011
offset_top = 14.9949
offset_right = 321.001
offset_bottom = 270.995
rotation = 1.56411
scale = Vector2(0.199983, 0.199983)
texture = ExtResource("5_gbo47")

[node name="Panel4" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.478431)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -18.0
offset_right = 100.0
offset_bottom = 62.0
grow_vertical = 0
rotation = -1.57072
theme_override_styles/panel = SubResource("StyleBoxTexture_b5mmr")

[node name="TextureRect" type="TextureRect" parent="Panel4"]
layout_mode = 0
offset_left = 65.0011
offset_top = 14.9949
offset_right = 321.001
offset_bottom = 270.995
rotation = 1.56411
scale = Vector2(0.199983, 0.199983)
texture = ExtResource("5_gbo47")

[node name="TextureRect4" type="TextureRect" parent="."]
offset_left = 78.0
offset_top = 544.0
offset_right = 334.0
offset_bottom = 800.0
scale = Vector2(0.118135, 0.118135)
texture = ExtResource("6_7ewu2")

[node name="Panel3" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.541176)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 114.0
offset_top = -18.0
offset_right = 194.0
offset_bottom = 62.0
grow_vertical = 0
rotation = -1.57072
theme_override_styles/panel = SubResource("StyleBoxTexture_b5mmr")

[node name="TextureRect" type="TextureRect" parent="Panel3"]
layout_mode = 0
offset_left = 71.0007
offset_top = 8.99463
offset_right = 327.001
offset_bottom = 264.995
rotation = 1.57871
scale = Vector2(0.240001, 0.240001)
texture = ExtResource("6_0rlab")

[node name="Panel5" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 201.0
offset_top = -22.0
offset_right = 235.0
offset_bottom = 115.0
grow_vertical = 0
rotation = -1.57072

[node name="TextureRect5" type="TextureRect" parent="Panel5"]
layout_mode = 0
offset_left = 31.0006
offset_top = 8.00029
offset_right = 156.001
offset_bottom = 133.0
rotation = 1.5708
scale = Vector2(0.278135, 0.278135)
texture = ExtResource("8_cwcko")

[node name="TextureRect6" type="TextureRect" parent="Panel5"]
layout_mode = 0
offset_left = 31.0006
offset_top = 42.0003
offset_right = 156.001
offset_bottom = 167.0
rotation = 1.5708
scale = Vector2(0.278135, 0.278135)
texture = ExtResource("9_i1l1k")

[node name="Label" type="Label" parent="Panel5"]
layout_mode = 0
offset_left = 29.0062
offset_top = 80.9978
offset_right = 83.0062
offset_bottom = 112.998
rotation = 1.5708
text = "RUN"
label_settings = SubResource("LabelSettings_enw7h")

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 171.0
offset_top = 543.0
offset_right = 427.0
offset_bottom = 799.0
scale = Vector2(0.118135, 0.118135)
texture = ExtResource("8_3jkjd")

[node name="OfensiveLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 45.0
offset_top = 69.0
offset_right = 103.0
offset_bottom = 109.0
text = "x30"
label_settings = SubResource("LabelSettings_qtva8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sounds" type="Node2D" parent="."]

[node name="PushClick" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("11_2x2y5")
volume_db = -15.407

[node name="LightningClick" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12_qt7ha")
